syntax = "proto3";

option java_package = "md.ramaiana.foodmarket.proto";
option java_outer_classname = "Authorization";

import "Clients.proto";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  UserProto user = 1;
  string token = 2;
  // token validity in seconds
  int32 tokenTtl = 3;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
  int32 clientId = 3;
}

message ResetPasswordRequest {
  string email = 1;
}

message UserProto {
  int32 id = 1;
  string email = 2;
  Client client = 3;
}

message ResetPasswordTokenRequest {
  string token = 1;
}

message NewPasswordRequest {
  string token = 1;
  string newPassword = 2;
}
